@@ -1,5 +1,6 @@
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags table in database conversions
+* Ensure publishers who publish data point attributes will not discard the latest reliability information nor allow memory use to grow
 
 *Version 3.5.3*
 * Fix critical vulnerability on Windows systems
